[project]
name = "brc"
authors = [{ name = "Mark Todisco", email = "marktodisco@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pytest"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
